--- a/.github/workflows/pr_agent.yml
+++ b/.github/workflows/pr_agent.yml
@@ -1,13 +1,16 @@
 on:
   pull_request:
+  issue_comment:
+
 jobs:
-  pr_agent_job:
+  pr_agent:
     runs-on: ubuntu-latest
     permissions:
       issues: write
       pull-requests: write
       contents: write
-    name: Run pr agent on every pull request, respond to user comments
+    name: Run PR Agent
+    if: ${{ github.event.sender.type != 'Bot' }}
     steps:
       - name: PR Agent action step
         id: pragent
@@ -21,4 +24,4 @@ jobs:
             descriptions, not overwrite those. Titles should not be overwritten."
           github_action.auto_review: "true"
           github_action.auto_describe: "false"
-          github_action.auto_improve: "false"
+          github_action.auto_improve: "true"
